# code-formatter

./: .gitignore  CMakeLists.txt
cmake/: clang_format.cmake  cppcheck.cmake  google_test.cmake
docs/source/: conf.py
project/: CMakeLists.txt
project/include/: FileContent.hpp
project/include/formatter/: Formatter.hpp  FormatterOptions.hpp
project/include/formatter/detail/: InsertNewLineAfterChar.hpp  UpdateIndentation.hpp
project/src/: CMakeLists.txt  main.cpp
project/src/formatter/: Formatter.cpp
project/src/formatter/detail/: InsertNewLineAfterChar.cpp  UpdateIndentation.cpp
project/unittests/: CMakeLists.txt  main.cpp
project/unittests/formatter/: CMakeLists.txt  FormatterTests.cpp
project/unittests/formatter/detail/: InsertNewLineAfterCharTests.cpp  UpdateIndentationTests.cpp
